--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Oh, Canada~</title>
-
 		<!-- Google Fonts -->
 		<link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 		<!-- Bootstrap CSS -->
@@ -13,15 +12,14 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<!-- My CSS -->
 		<link rel="stylesheet" href="css/styles.css">
-		<!-- More Scripts -->
+		<!-- Angular JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-resource.js"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.js"></script>
+	    <!-- App JS -->
 	    <script src="app/services.js"></script>
 	    <script src="app/controllers.js"></script>
 	    <script src="app/app.js"></script>
-
-		
 	</head>
 	<body>
 		<div class="container">
